# async-postgres-watcher

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
async_postgres_watcher/: __init__.py  watcher.py
test/: test_async_postgres_watcher.py
